# FluxBoard

./: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  skills-lock.json  turbo.json  vercel.json
api/: index.py
apps/api/: drop_smoke.py  main.py  package.json
apps/api/app/: __init__.py  api.py  auth.py  config.py  master.py  repositories.py  security.py
apps/api/app/database/: __init__.py  connection.py  migrate.py  models.py  session.py
apps/api/app/schemas/: __init__.py  auth.py  product.py  validation.py
apps/api/app/services/: ai.py
apps/api/app/sub_agents/: __init__.py  analyst_agent.py  jira_anchor.py  mcp_hub.py  response_formatter.py  schema_pruner.py  security_veto.py  tidb_branch.py
apps/api/eval/: __init__.py  adversarial.py  datasets.py  run_experiments.py  scale.py  schema_full.py  tokens.py
apps/api/eval/results/: exp1_attack_suite.csv  exp2_rbac_redaction.csv  exp3_token_reduction.csv  exp4_latency.csv  exp6_scale.csv  exp_asr_realllm.csv
apps/api/scripts/: build.cmd  dev.cmd  lint.cmd  run.mjs  test.cmd
apps/api/tests/: conftest.py  test_api_cli.py  test_auth.py  test_database_config.py  test_jira_anchor.py  test_product_api.py  test_routing_agent.py  test_schema_pruner.py  test_security_veto.py  test_tidb_branch.py
apps/web/: eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
docs/: ai_mutation_safety_flow.md  scope.txt
paper/: README.md  fluxboard_q2.tex
(+21 files in other folders)
